tests/baselines/reference/annotationApplicationError19.errors.txt
tests/cases/conformance/annotations/annotationApplicationError19.ets(7,5): error TS28021: Annotation have to be applied only for non-abstract class declarations and method declarations in non-abstract classes, got: '@Anno
    @Anno
    abstract foo();'.
tests/cases/conformance/annotations/annotationApplicationError19.ets(8,5): error TS28021: Annotation have to be applied only for non-abstract class declarations and method declarations in non-abstract classes, got: '@Anno
    @Anno
    abstract foo();'.


==== tests/cases/conformance/annotations/annotationApplicationError19.ets (2 errors) ====
    @interface Anno {
        a: number = 10
        b: string[] = []
    }
    
    abstract class C {
        @Anno
        ~~~~~
!!! error TS28021: Annotation have to be applied only for non-abstract class declarations and method declarations in non-abstract classes, got: '@Anno
!!! error TS28021:     @Anno
!!! error TS28021:     abstract foo();'.
        @Anno
        ~~~~~
!!! error TS28021: Annotation have to be applied only for non-abstract class declarations and method declarations in non-abstract classes, got: '@Anno
!!! error TS28021:     @Anno
!!! error TS28021:     abstract foo();'.
        abstract foo();
    }
    